--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <title>W. Notícias</title>
 </head>
 <body>
-    <header class="header-mobile">
+    <header>
         <img src="./assets/images/logo.svg" alt="logo do site de Notícias W.">
 
         <button> 
             <img src="./assets/images/icon-menu.svg" alt="Ícone do menu hamburguer">
         </button>
 
-        <nav>
+        <nav class="mobile">
             <button>
                 <img src="./assets/images/icon-menu-close.svg" alt="Ícone de X para fechar o menu">
 
@@ -34,11 +34,25 @@
             <a href="#">Categorias</a>
         </nav>
 
+        <nav class="desktop">
+            <a href="#">Home</a>
+            <a href="#">Novo</a>
+            <a href="#">Popular</a>
+            <a href="#">Trending</a>
+            <a href="#">Categorias</a>
+
+        </nav>
+
     </header>
+
+    
 
     <main>
         <section class="primeira-secao">
-            <img src="./assets/images/image-web-3-mobile.jpg" alt="Ícone de puzzle colorido">
+            <picture>
+                <source media="(min-width: 700px )" srcset="./assets/images/image-web-3-desktop.jpg">
+                <img src="./assets/images/image-web-3-mobile.jpg" alt="Ícone de puzzle colorido">
+            </picture>
             <h1> O futuro brilhante da web 3.0?</h1>
             <p> Nós mergulhamos na próxima evolução da web que afirma devolver o podder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
             <button> Ler Mais </button>
