--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <source media="(min-width: 700px )" srcset="./assets/images/image-web-3-desktop.jpg">
                 <img src="./assets/images/image-web-3-mobile.jpg" alt="Ícone de puzzle colorido">
             </picture>
-            
+
             <h1> O futuro brilhante da web 3.0?</h1>
             <div>
                 <p> Nós mergulhamos na próxima evolução da web que afirma devolver o podder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
@@ -88,7 +88,10 @@
 
                 <div>
                     <strong>01</strong>
-                    <h2>Revivendo PCs antigos </h2>
+                    <a href="#">
+                        <h2>Revivendo PCs antigos </h2>
+                    </a>
+                       
                     <p>E se Pcs antigos pudessem receber peças modernas?</p>
 
                 </div>
@@ -98,7 +101,9 @@
                 <img src="./assets/images/image-top-laptops.jpg" alt="Imagem de laptop">
                 <div>
                     <strong>02</strong>
-                    <h2>Top 10 Laptops de 2024</h2>
+                    <a href="#">
+                        <h2>Top 10 Laptops de 2024</h2>
+                    </a>
                     <p>Nossas melhores escolhas para diversas necessidades.</p>
                 </div>
             </div>
@@ -106,7 +111,9 @@
                 <img src="./assets/images/image-gaming-growth.jpg" alt="imagem de um controle de vídeo game ">
                 <div>
                     <strong>03</strong>
-                    <h2>O Crescimento dos Jogos </h2>
+                    <a href="#">
+                        <h2>O Crescimento dos Jogos </h2>
+                    </a>
                     <p>Como a pandemia tem gerado novas oportunidades.</p>
                 </div>
             </div>
